bynkc/tests/fixtures/positive/18_let_simple/input.karn
commons test {
  fn double(n: Int) -> Int {
    let x: Int = n + n
    x
  }
}
