bynkc/tests/fixtures/negative/134_integration_too_few_participants/src/it.karn
test integration "x" {
  wires app.a
  test "t" { let r <- app.a.ping() assert r == 1 }
}
